fix: lands-container overflow styles

--- a/src/modules/yield-farming/components/landworks-pool-stake/index.scss
+++ b/src/modules/yield-farming/components/landworks-pool-stake/index.scss
@@ -11,7 +11,7 @@
   .lands-container {
     min-height: 170px;
     max-height: 170px;
-    overflow: scroll;
+    overflow: auto;
 
     .landBox {
       background: #FAF7F9;
